<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/basic_text_view"
            android:layout_marginBottom="10dp"
            android:text="@string/product_header"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/product_name"
            style="@style/edit_text"
            android:hint="@string/name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp">

            <TextView
                style="@style/unit_values"
                android:text="@string/currency" />

            <EditText
                android:id="@+id/product_price"
                style="@style/edit_text"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"
                android:paddingLeft="12dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/product_stock"
                android:textSize="17sp" />

            <Button
                style="@style/button_style"
                android:onClick="decrement"
                android:text="-" />

            <EditText
                android:id="@+id/product_quantity"
                style="@style/edit_text"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/initial_value" />

            <Button
                style="@style/button_style"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/titleColour" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/titleColour" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/basic_text_view"
            android:layout_marginBottom="10dp"
            android:text="@string/supplier_header"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/supplier_name"
            style="@style/edit_text"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/supplier_phone_no"
            style="@style/edit_text"
            android:hint="@string/supplier_phone"
            android:inputType="number" />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/footer" />

</LinearLayout>
